# mavsim

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CPackConfig.cmake  Doxyfile  README  autobuild.sh  config.h.cmake  createTags  helper  index.html  oooark.pc  scilab.ini  wscript
CMakeModules/: FindGTKmm.cmake  FindJSBSIM.cmake  FindQUADRACOPTER.cmake  FindSCICOSLAB.cmake
app/: CMakeLists.txt
app/mavsim/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
app/trim/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui
blender/: import_freecad.py
cmake/Modules/: FindSIMGEAR.cmake
config/: CMakeLists.txt  config.h.in  loader.sce.in
data/: D1.xml  D2.xml  DX.xml  E.xml  F.xml  M1.xml  M2.xml  MX.xml  Makefile.am  Q.xml  R.xml  T.xml  calibration_arduimu.gnumeric  calibration_ardumega.gnumeric  calibration_imu6dofv4.gnumeric  guiTest.glade  joystick  kalmanTest.sce  kalmanTestCase.txt  plane.ac  plane.blend  plane.osg  yahoo_aerial.earth  yahoo_heightfield.earth
data/EasyStar/: EasyStar-windtunnel.xml
data/Jet/: aileronLeft.ac  aileronRight.ac  elevatorLeft.ac  elevatorRight.ac  fuselage.ac  jet.ac  jet.blend  jet.blend.ac  (+1 more)
html/: _async_serial_8cpp.html  _async_serial_8cpp__incl.map  _async_serial_8cpp__incl.md5  _async_serial_8cpp_source.html  _async_serial_8hpp.html  _async_serial_8hpp__dep__incl.map  _async_serial_8hpp__dep__incl.md5  _async_serial_8hpp__incl.md5  _async_serial_8hpp_source.html  _flight_gear_comm_8cpp.html  _flight_gear_comm_8cpp__incl.map  _flight_gear_comm_8cpp__incl.md5  _flight_gear_comm_8cpp_source.html  _flight_gear_comm_8hpp.html  _flight_gear_comm_8hpp__dep__incl.map  _flight_gear_comm_8hpp__dep__incl.md5  _flight_gear_comm_8hpp__incl.map  _flight_gear_comm_8hpp__incl.md5  _flight_gear_comm_8hpp_source.html  _geo_mag_8cpp.html  _geo_mag_8cpp__incl.map  _geo_mag_8cpp__incl.md5  _geo_mag_8cpp_source.html  _geo_mag_8hpp.html  _geo_mag_8hpp__dep__incl.map  _geo_mag_8hpp__dep__incl.md5  _geo_mag_8hpp__incl.md5  _geo_mag_8hpp_source.html  _gps_ins_8cpp.html  _gps_ins_8cpp__incl.map  _gps_ins_8cpp__incl.md5  _gps_ins_8cpp_source.html  _gps_ins_8hpp.html  _gps_ins_8hpp__dep__incl.map  _gps_ins_8hpp__dep__incl.md5  _gps_ins_8hpp__incl.md5  _gps_ins_8hpp_source.html  _main_window_8cpp.html  _main_window_8cpp__incl.map  _main_window_8cpp__incl.md5  (+577 more)
mavsim-toolbox/: builder.sce  loader.sce
oooark-toolbox/: .gitignore  SuperBlock.cos  Untitled.cos  builder.sce  loader.sce  loadscicos.sce
scicoslab/: Untitled.cos  easystar-datcom_lin.sce  loader.sce  scilab.ini
scripts/: fgrun.sh  fgrunExt.sh
src/: CMakeLists.txt
src/communication/: ApmProtocol.cpp  ApmProtocol.hpp  AsyncSerial.cpp  AsyncSerial.hpp  CMakeLists.txt  FlightGearComm.cpp  FlightGearComm.hpp  JSBSimComm.cpp  JSBSimComm.hpp  asio_mavlink_bridge.h  asio_mavlink_bridge_header.h  flightGearUtils.hpp
src/dynamics/: dynamicsBodyFrame.hpp  windDynamics.hpp
src/math/: CMakeLists.txt  GpsIns.cpp  GpsIns.hpp  utilities.cpp  utilities.hpp
src/navigation/: CMakeLists.txt  GeoMag.cpp  GeoMag.hpp  ins_C_nb_euler.hpp  ins_C_nb_quat.hpp  ins_H_gps.hpp  ins_H_gps_vp.hpp  ins_H_mag.hpp  ins_H_mag_att.hpp  ins_R_gps.hpp  ins_R_mag_n.hpp  ins_dynamics_H_gps.hpp  ins_dynamics_H_mag.hpp  ins_dynamics_R_gps.hpp  ins_dynamics_R_mag.hpp  ins_dynamics_R_mag_n.hpp  ins_dynamics_error_F.hpp  ins_dynamics_error_F_att.hpp  ins_dynamics_error_F_vp.hpp  ins_dynamics_error_G.hpp  ins_dynamics_error_G_att.hpp  ins_dynamics_error_G_vp.hpp  ins_dynamics_f.hpp  ins_dynamics_f_att.hpp  ins_dynamics_f_vp.hpp  ins_error_dynamics_F.hpp  ins_error_dynamics_F_att.hpp  ins_error_dynamics_F_vp.hpp  ins_error_dynamics_G.hpp  ins_error_dynamics_G_att.hpp  ins_error_dynamics_G_vp.hpp
src/scicos/: CMakeLists.txt  VERSION.in  loader.sce.in  loaderLocal.sce.in  loadscicos.sce.in  loadscicosLocal.sce.in  sci_ardupilotmegaHil.cpp  sci_bodyDynamics.cpp  sci_car.cpp  sci_cnb2Euler.cpp  sci_eom6Dof.cpp  sci_euler2Dcm.cpp  sci_flightGearComm.cpp  sci_geoMag.cpp  sci_gpsIns.cpp  sci_gpsMeasModel.cpp  sci_initBearing.cpp  sci_insDynamics.cpp  sci_insDynamicsQ.cpp  sci_insErrorDynamics.cpp  sci_insErrorDynamicsQ.cpp  sci_insQmagH.cpp  sci_jet.cpp  sci_jsbSimComm.cpp  sci_jsbsimComm.cpp  sci_jsbsimTrim.cpp  sci_magMeasModel.cpp  sci_mavlinkHil.cpp  sci_mavlinkHilSensor.cpp  sci_mavlinkHilState.cpp  sci_mavlinkHilTracker.cpp  sci_navigationEquations.cpp  sci_plane.cpp  sci_q2Cnb.cpp  sci_quad.cpp  sci_quadForceMoments.cpp  sci_quat2EulerDcm.cpp  sci_randn.cpp  sci_waypointGuidance.cpp  sci_windDynamics.cpp  (+3 more)
src/scicos/scicos/: config.h
src/visualization/: CMakeLists.txt  Ellipsoid.cpp  Ellipsoid.hpp  PointCloud.cpp  PointCloud.hpp  QOSGAdapterWidget.cpp  QOSGAdapterWidget.hpp  Viewer.cpp  Viewer.hpp  osgUtils.cpp  osgUtils.hpp
templates/: template.am  template.hpp
test/: .gitignore  CMakeLists.txt  gcs.cpp  hello.f90  helloWorld  ins.cpp  visualization  visualization.cpp
test/fortranC/: CMakeLists.txt  helloWorld  test.cpp
test/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MapVehicle.cpp  MapVehicle.hpp  MapWidget.cpp  MapWidget.hpp  QOSGAdapterWidget.cpp  QOSGAdapterWidget.hpp  gui  main.cpp  moc_MainWindow.cxx  ui_MainWindow.h
test/gui/forms/: MainWindow.ui
test/old/: Makefile.am  visualization.cpp
theory/: .gitignore  InsQuatErrorDynamics.wxm  ahrs.wxm  arducopter.sci  common.wxm  dynamics.wxm  dynamicsBodyFrame.wxm  dynamicsWindFrame.wxm  feedback.wxm  generateCode.sh  ins.wxm  ins_dynamics.wxm  ins_dynamics_H_mag.cpp  ins_dynamics_H_mag.f90  ins_dynamics_error_F.cpp  ins_dynamics_error_F.f90  ins_dynamics_error_F.txt  ins_dynamics_error_G.cpp  ins_dynamics_error_G.f90  ins_dynamics_error_G.txt  ins_dynamics_error_f.f90  ins_dynamics_f.cpp  ins_dynamics_f.f90  ins_dynamics_f.txt  linearQuadraticDemo.sce  lqof.sci  maxima-init.mac  mikrokopter.sci  motorAnalysis.sci  multiLoopOptimalControl.wxm  navigation.wxm  navigatorEquations.wxm  opticalFlowSensor.wxm  outputFeedback.sci  pidLowPassBLT.wxm  quad.cos  quad.sci  quadDynamics.wxm  quadForwardFlightDesign.sci  quadHover.sci  (+12 more)
(+410 files in other folders)
